# otus_cpp_homework-10

./: .travis.yml  CMakeLists.txt  README.md  bulk.cpp  bulk.h  main.cpp  test_bulkmt.cpp
source/: CMakeLists.txt  bulkmt.cpp  main.cpp  mtbulk.cpp  mtbulk.h
tests/: CMakeLists.txt  test_bulkmt.cpp  test_mtbulk.cpp
